[tool.poetry]
name = "pythonproject16"
version = "0.1.0"
description = ""
authors = ["Andrey Tarakanov <andrey.t-krd@yandex.ru>"]

[tool.poetry.dependencies]
python = "^3.10"
Markdown = "^3.5"
flake8 = "^6.1.0"
bs4 = "^0.0.1"
requests = "^2.31.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
